--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna Recipes</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna Recipes</a></li>
+            <li><a href="./recipes/meatball.html">Meatball</a></li>
+            <li><a href="./recipes/pizza.html">Pizza</a></li>
+        </ul>
+
     </body>
 </html>
