Update the content of lasagna page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta lang="UTF-8">
-        <title>Lasagna Recipes by Odin</title>
+        <title>Lasagna Recipes by Odin!</title>
     </head>
     <body>
         <h1>Lasagna</h1>
