Create CSS file and applied to each html page

--- a/recipes/meatball.html
+++ b/recipes/meatball.html
@@ -4,11 +4,13 @@
 <head>
     <meta lang="UTF-8">
     <title>Meatball Recipes by Odin!</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
-<body>
+<body class="meatball">
     <h1>Meatball</h1>
     <img src="../images/meatball.jpeg" alt="meatball">
+    <div>
     <h3>Description</h3>
     <p>A lovely meatball fresh from your kitchen like good ol days!</p>
     <h4>Ingredients</h4>
@@ -32,6 +34,7 @@
         <li>Place the beef into a mixing bowl, and season with salt, onion, garlic salt, Italian seasoning, oregano, red pepper flakes, hot pepper sauce, and Worcestershire sauce; mix well. Add the milk, Parmesan cheese, and bread crumbs. Mix until evenly blended, then form into 1 1/2-inch meatballs, and place onto a baking sheet.</li>
         <li>Bake in the preheated oven until no longer pink in the center, 20 to 25 minutes.</li>
     </ol>
+</div>
 </body>
 
 </html>
