--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,11 +4,13 @@
 <head>
     <meta lang="UTF-8">
     <title>Pizza Recipes by Odin!</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
-<body>
+<body class="pizza">
     <h1>Pizza</h1>
     <img src="../images/pizza.jpeg" alt="pizza">
+    <div>
     <h3>Description</h3>
     <p>A lovely pizza fresh from your kitchen like good ol days!</p>
     <h4>Ingredients</h4>
@@ -26,6 +28,7 @@
         <li>Bake in the preheated oven until the crust is golden brown and cheese is melted in the center, 10 to 15 minutes. Slice and serve.</li>
         
     </ol>
+</div>
 </body>
 
 </html>
