--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta lang="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <body class="home">
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagna Recipes</a></li>
             <li><a href="./recipes/meatball.html">Meatball</a></li>
             <li><a href="./recipes/pizza.html">Pizza</a></li>
         </ul>
-
     </body>
 </html>
