--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,10 +3,12 @@
     <head>
         <meta lang="UTF-8">
         <title>Lasagna Recipes by Odin!</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
-    <body>
+    <body class="lasagna">
         <h1>Lasagna</h1>
         <img src="../images/lasagna.jpeg" alt="hearty-vegetable-lasagna">
+        <div>
         <h3>Description</h3>
         <p>A lovely lasagna fresh from your kitchen oven like good ol days!</p>
         <h4>Ingredients</h4>
@@ -32,5 +34,6 @@
             <li>oven to 350 degrees F (175 degrees C). Spread 1 cup tomato sauce into the bottom of a greased 9x13 inch baking dish. Layer 1/2 each, lasagna noodles, ricotta mix, sauce, and Parmesan cheese. Repeat layering, and top with remaining 2 cups mozzarella cheese.</li>
             <li>Bake, uncovered, for 40 minutes. Let stand 15 minutes before serving.</li>
         </ol>
+    </div>
     </body>
 </html>
